intermine/webapp/main/resources/webapp/css/query.css
/* instead of using the body div, use this one */
div.bodyPeekaboo
{
  position:relative;
  margin: 12px 12px 10px 12px;
  font-size: 12px;}

/* surrounds view paths */
div.view {
  padding: 4px 4px 14px 4px;}

/* one path added to the view area */
div.viewpath {
  float: left;
  padding: 5px; margin-right: 5px; margin-bottom: 5px;
  background-color: #E7F1FB; border: 1px solid #bbb; text-align: center; font-size: 11px; cursor: pointer; cursor: hand;}

/* a path in the view that has an error */
div.errorPath {
  float: left;
  padding: 5px; margin-right: 5px; margin-bottom: 5px;
  background-color: #FBB; border: 1px solid #eaa; text-align: center; font-size: 11px;}

div.viewpathDisabled {
  background: #bbb;}

div.viewListEdit {
  float: left;
  padding-right: 6px; padding-top: 1.5em;
  color: #555;}

span.viewPathDescription {
  font-style: italic;}

/* surrounds sort order paths */
div.sortorder {
  padding: 4px; padding-bottom: 14px;}

/* one path added to the sort order area */
div.sortorderpath {
  float: left; width: 250px;
  padding: 5px; margin-right: 5px; margin-bottom: 5px;
  background-color: #F5F0FF; color: #660099; border: 1px solid #bbb; text-align: center; font-size: 11px; cursor: hand;}
 
.showing {
  padding: 1px 0 1px 3px; margin-left: 3px; margin-right: 3px;
  background-color: #E7F1FB; border: 1px solid #bbb; line-height: 25px;}

table.query {
  border: none;}

div.modelbrowse {
  border-right: 1px solid #888;}
  
#mainBrowser {
  float:left;
  width:500px;
  /*margin-right:10px;*/
}

#browserbody {
  height:400px;
  overflow-y:auto;
}
  
#rightColumn {
  margin-left:500px;
  width:500px;
}

/* Outer Joins diagram */
li.block {
  list-style:none;
}

.block {
  border: 2px solid #0090DF;
  background-color: #68BFEF;
  width: 150px; 
  height: 70px;
  margin: 10px;
}

.canvas {
  position: absolute;
  z-index: -10;
}

.viewTitle {
  background:#1863B8;
  color:white;
}

.constraintTitle {
  background:#B12A2A;
  color:white;
}

.currentTitle {
  background:#008000;
  color:white;
}

#constraintLogic {
  border-top:1px solid #CCC;
  margin:25px 10px;
  padding-top:5px;
}

form#submitform input, form#submitform {
  vertical-align:top;
  padding:0; margin:0;
}

.actions { 
  padding-top: 5px;
}

.actions p {
  margin-bottom:15px;
}


.and {
  font-size: 10px;}

.constraint {
  color: purple;}

.browserline {
  white-space: nowrap;}

table.noborder, table.noborder td, table.noborder th {
  border: none;}
  
#constraintLogic {
  border:none;
  padding: 2px;
  border:1px solid #CACACA;
}
  
#constraintLogic:hover {
  background-color:#F0FFB3;
  border:1px solid #CCC;
}
  
#constraintLogicContainer {
  margin-top:25px;
}

